--- a/songLists/src/main/resources/application.properties
+++ b/songLists/src/main/resources/application.properties
@@ -1,1 +1,22 @@
+## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
+spring.datasource.url = jdbc:postgresql://psql.f4.htw-berlin.de:5432/kbe_songms_songlists_s
+spring.datasource.username = kbe_songms_songlists_s_user
+spring.datasource.password = 0sdIUjXdo
 
+
+## Hibernate Properties
+
+# The SQL dialect makes Hibernate generate better SQL for the chosen database
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.show_sql= true
+spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+# Hibernate ddl auto (create, create-drop, validate, update)
+spring.jpa.hibernate.ddl-auto=  update
+logging.level.de.htwb.ai.controller.SongListController=DEBUG
+
+server.port=8083
+
+auth.service.url=http://localhost:8081
+
+songs.service.url=http://localhost:8082
