--- a/eureka/pom.xml
+++ b/eureka/pom.xml
@@ -32,6 +32,11 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>se.michaelthelin.spotify</groupId>
+            <artifactId>spotify-web-api-java</artifactId>
+            <version>8.0.0</version>
+        </dependency>
     </dependencies>
     <dependencyManagement>
         <dependencies>
