spotifyUploader authorize route fix

--- a/spotifyUploader/src/main/resources/application.properties
+++ b/spotifyUploader/src/main/resources/application.properties
@@ -1,15 +1,9 @@
 # application.yml
 
-spotify.client.id = b2b70609324c4b7883e99c450246df2e
-spotify.client.secret = 34c17c4526774a759c930c673a093ad9
-spotify.api.url= http://localhost:8084
-spotify.redirect.uri = http://localhost:8084
-
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 spring.datasource.url = jdbc:postgresql://psql.f4.htw-berlin.de:5432/kbe_songms_songlists_s
 spring.datasource.username = kbe_songms_songlists_s_user
 spring.datasource.password = 0sdIUjXdo
-
 
 ## Hibernate Properties
 
@@ -34,5 +28,12 @@ songplaylists.service.url=http://localhost:8083
 spotify.access.token = null
 spotify.refresh.token = null
 
+# Spotify API
+
 spotify.clientId = b2b70609324c4b7883e99c450246df2e
 spotify.clientSecret = 34c17c4526774a759c930c673a093ad9
+
+spotify.client.id = b2b70609324c4b7883e99c450246df2e
+spotify.client.secret = 34c17c4526774a759c930c673a093ad9
+spotify.api.url= https://api.spotify.com
+spotify.redirect.uri = http://localhost:8084/spotify/callback
