new api_gateway + spotify ms getplaylistinternal route

--- a/spotifyUploader/src/main/resources/application.properties
+++ b/spotifyUploader/src/main/resources/application.properties
@@ -1,10 +1,9 @@
 # application.yml
 
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-spring.datasource.url = jdbc:postgresql://psql.f4.htw-berlin.de:5432/kbe_songms_songlists_s
-spring.datasource.username = kbe_songms_songlists_s_user
-spring.datasource.password = 0sdIUjXdo
-
+spring.datasource.url = jdbc:postgresql://psql.f4.htw-berlin.de:5432/kbe_songms_spotify
+spring.datasource.username = kbe_songms_spotify_user
+spring.datasource.password = WRa6aaD9j
 ## Hibernate Properties
 
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
@@ -25,7 +24,7 @@ songs.service.url=http://localhost:8082
 songplaylists.service.url=http://localhost:8083
 
 # Tokens (temporary storage)
-spotify.access.token = null
+spotify.access.token = BQAAVKS8BXdYK03EbQvUrTxluglWhtNldKe-sUeyaEqFqobV4UlRDfoQOKUpJZoq7dfV0n_PB56u2Eu7PoaK_iYSpDdmWaKZmDHDpld9gS3Yb1YO1vxykP5jAH2nxBMqo-7lnPcNHqOhatBFpNx5hBn-w-eSc-ZJSQOcUp184ledHhbDivoHddeB8CKdKJv8ATM7SP1MSQmgUF638waG-CwSkjgLMkwS
 spotify.refresh.token = null
 
 # Spotify API
