eureka setup complete

--- a/eureka/src/main/resources/application.properties
+++ b/eureka/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 # application.properties
 
-spring.application.name=eureka-server
+spring.application.name=eureka
 server.port=8761
 
 # Eureka Configuration
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
-eureka.server.enable-self-preservation=false
+eureka.server.enable-self-preservation=true
 eureka.server.eviction-interval-timer-in-ms=60000
 
-
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
