--- a/songLists/src/main/resources/application.properties
+++ b/songLists/src/main/resources/application.properties
@@ -17,3 +17,7 @@ server.port=8083
 
 auth.service.url=http://localhost:8099
 songs.service.url=http://localhost:8099
+
+eureka.instance.preferIpAddress=true
+spring.application.name=ms_song_lists
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
