--- a/apiGateway/src/main/resources/application.properties
+++ b/apiGateway/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 server.port=8099
 
+eureka.instance.preferIpAddress=true
+spring.application.name=api-gateway
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
