--- a/spotifyUploader/src/main/resources/application.properties
+++ b/spotifyUploader/src/main/resources/application.properties
@@ -1,18 +1,15 @@
 # application.yml
 
-## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 spring.datasource.url = jdbc:postgresql://psql.f4.htw-berlin.de:5432/kbe_songms_spotify
 spring.datasource.username = kbe_songms_spotify_user
 spring.datasource.password = WRa6aaD9j
-## Hibernate Properties
 
-# The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.show_sql= true
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-# Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto=  update
+
 logging.level.de.htwb.ai.controller.SongListController=DEBUG
 
 server.port=8084
@@ -21,9 +18,6 @@ auth.service.url=http://localhost:8099
 songs.service.url=http://localhost:8099
 songplaylists.service.url=http://localhost:8099
 
-
-# Spotify API
-
 spotify.clientId = b2b70609324c4b7883e99c450246df2e
 spotify.clientSecret = 34c17c4526774a759c930c673a093ad9
 
@@ -31,3 +25,7 @@ spotify.client.id = b2b70609324c4b7883e99c450246df2e
 spotify.client.secret = 34c17c4526774a759c930c673a093ad9
 spotify.api.url= https://api.spotify.com
 spotify.redirect.uri = http://localhost:8084/spotify/callback
+
+eureka.instance.preferIpAddress=true
+spring.application.name=ms_spotify
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
