--- a/spotifyUploader/src/main/resources/application.properties
+++ b/spotifyUploader/src/main/resources/application.properties
@@ -14,9 +14,7 @@ logging.level.de.htwb.ai.controller.SongListController=DEBUG
 
 server.port=8084
 
-auth.service.url=http://localhost:8099
-songs.service.url=http://localhost:8099
-songplaylists.service.url=http://localhost:8099
+service.url=http://localhost:8099
 
 spotify.clientId = b2b70609324c4b7883e99c450246df2e
 spotify.clientSecret = 34c17c4526774a759c930c673a093ad9
