--- a/songLists/src/main/resources/application.properties
+++ b/songLists/src/main/resources/application.properties
@@ -3,20 +3,16 @@ spring.datasource.url = jdbc:postgresql://psql.f4.htw-berlin.de:5432/kbe_songms_
 spring.datasource.username = kbe_songms_songlists_s_user
 spring.datasource.password = 0sdIUjXdo
 
-
-# The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.show_sql= true
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-# Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto=  update
 logging.level.de.htwb.ai.controller.SongListController=DEBUG
 
 server.port=8083
 
-auth.service.url=http://localhost:8099
-songs.service.url=http://localhost:8099
+service.url=http://localhost:8099
 
 eureka.instance.preferIpAddress=true
 spring.application.name=ms_song_lists
