--- a/songs/src/main/resources/application.properties
+++ b/songs/src/main/resources/application.properties
@@ -12,7 +12,7 @@ logging.level.de.htwb.ai.controller.SongListController=DEBUG
 
 server.port=8082
 
-auth.service.url=http://localhost:8099
+service.url=http://localhost:8099
 
 eureka.instance.preferIpAddress=true
 spring.application.name=ms_songs
